Switch map taken flag to only equip on skulkin escape Cleaned up and fixed SkulkinRaider AI and spawning Switched four weapons maps advancement to work for anything with the component and made plural Made raided skulkin areas save